Stop emoji picker header from overlapping tabs

--- a/webapp/channels/src/sass/components/_emoticons.scss
+++ b/webapp/channels/src/sass/components/_emoticons.scss
@@ -228,7 +228,6 @@
 
 .emoji-picker__header,
 .modal-body .emoji-picker .emoji-picker__header {
-    position: absolute;
     top: 0;
     display: none; // only visible < 480px width screen
     width: 100%;
